<?xml version="1.0"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kendar.protocol</groupId>
    <artifactId>protocol-master</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>protocol-common</module>
        <module>protocol-test</module>
        <module>protocol-postgres</module>
        <module>protocol-mongo</module>
        <module>protocol-mysql</module>
        <module>protocol-runner</module>
        <module>protocol-amqp-091</module>
        <module>protocol-redis</module>
        <module>protocol-mqtt</module>
        <module>jacoco</module>
        <module>protocol-http</module>
        <module>sample-plugins</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <revision>2.0.0</revision>
        <testcontainers.version>1.20.1</testcontainers.version>
        <testcontainers.redis.version>1.6.4</testcontainers.redis.version>
        <junit.jupiter.version>RELEASE</junit.jupiter.version>
        <mybatis.version>3.5.7</mybatis.version>
        <mysql.version>8.2.0</mysql.version>
        <postgres.version>42.7.0</postgres.version>
        <jackson.version>2.16.0</jackson.version>
        <beanutils.version>1.9.4</beanutils.version>
        <mongodb.version>4.11.0</mongodb.version>
        <snappy.version>1.1.8.4</snappy.version>
        <zstd.version>1.5.2-2</zstd.version>
        <hibernate.version>5.2.6.Final</hibernate.version>
        <jaxb.api.version>2.3.0</jaxb.api.version>
        <commons.cli.version>1.6.0</commons.cli.version>
        <amqp.client.version>5.20.0</amqp.client.version>
        <jedis.version>5.1.2</jedis.version>
        <commons.io.version>2.7</commons.io.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <commons.text.version>1.10.0</commons.text.version>
        <pl4j.version>3.12.1</pl4j.version>
        <jaxb.api.version>2.3.0</jaxb.api.version>
        <apache.http.version>4.5.13</apache.http.version>
        <json.schema.validator.version>1.0.66</json.schema.validator.version>
        <pl4j.version>3.12.1</pl4j.version>
        <commons.cli.version>1.6.0</commons.cli.version>
        <bouncycastle.version>1.68</bouncycastle.version>
    </properties>
    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>org.slf4j</groupId>-->
        <!--            <artifactId>slf4j-api</artifactId>-->
        <!--            <version>2.0.7</version>-->

        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.slf4j</groupId>-->
        <!--            <artifactId>slf4j-log4j12</artifactId>-->
        <!--            <version>2.0.7</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.logging.log4j</groupId>-->
        <!--            <artifactId>log4j-api</artifactId>-->
        <!--            <version>2.22.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.4.8</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.8</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.7</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${beanutils.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>

        <!--<repository>
            <id>kendar</id>
            <name>Kendar Repository</name>
            <url>https://maven.kendar.org/maven2/releases</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>kendar2</id>
            <name>Kendar Repository2</name>
            <url>https://maven.kendar.org/maven2/snapshots</url>
            <layout>default</layout>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>-->
        <repository>
            <id>central2</id>
            <name>Central Repository2</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <!-- https://repo.maven.apache.org/maven2 -->
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central3</id>
            <name>Central Repository3</name>
            <url>https://repo1.maven.org/maven2</url>
            <!-- https://repo.maven.apache.org/maven2 -->
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <artifactId>wagon-ftp</artifactId>
                <groupId>org.apache.maven.wagon</groupId>
                <version>3.5.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <configuration>
                    <includes>
                        <include>org.kendar.**</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>agent-for-ut</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>releases.ftp</id>
            <url>ftp://maven.kendar.org/maven2/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots.ftp</id>
            <url>ftp://maven.kendar.org/maven2/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
</project>